Better button labels for limited and unsupported GPU warning #70521

Closed
opened 2019-10-04 15:54:54 +02:00 by Brecht Van Lommel · 5 comments

After D5955: GPU: Platform Support Level we can still make an improvement to this dialog, changing:

Help Ok

To:

Find Latest Drivers Continue Anyway

This requires creating a custom dialog on Windows.

After [D5955: GPU: Platform Support Level](https://archive.blender.org/developer/D5955) we can still make an improvement to this dialog, changing: | Help | Ok | | -- | -- | To: | Find Latest Drivers | Continue Anyway | | -- | -- | This requires creating a custom dialog on Windows.
Author
Owner

Added subscriber: @brecht

Added subscriber: @brecht
Member

Added subscribers: @Jeroen-Bakker, @LazyDodo

Added subscribers: @Jeroen-Bakker, @LazyDodo
Member

This is actually less complicated than you may think, in vista (our current low bar) we got a new dialog API for simple things like this.

	int nButtonPressed = 0;
	TASKDIALOGCONFIG config = { 0 };
	const TASKDIALOG_BUTTON buttons[] = {
		{ IDOK, L"Find Latest Drivers"},
		{ IDCONTINUE, L"Continue Anyway"}
	};

	config.cbSize = sizeof(config);
	config.hInstance = 0;
	config.dwCommonButtons = 0;
	config.pszMainIcon = TD_WARNING_ICON;
	config.pszWindowTitle = L"Blender";
	config.pszMainInstruction = L"Popup Tile";
	config.pszContent = L"yadayadaya drivers yadayadaya ";
	config.pButtons = buttons;
	config.cButtons = ARRAYSIZE(buttons);

	TaskDialogIndirect(&config, &nButtonPressed, NULL, NULL);
	switch (nButtonPressed)
	{
	case IDOK:
		break;
	case IDCONTINUE:
		break;
	default:
		break; // should never happen
	}

gets you

image.png

cc: @Jeroen-Bakker

This is actually less complicated than you may think, in vista (our current low bar) we got a [new dialog API ](https://docs.microsoft.com/en-us/windows/win32/controls/task-dialogs) for simple things like this. ``` int nButtonPressed = 0; TASKDIALOGCONFIG config = { 0 }; const TASKDIALOG_BUTTON buttons[] = { { IDOK, L"Find Latest Drivers"}, { IDCONTINUE, L"Continue Anyway"} }; config.cbSize = sizeof(config); config.hInstance = 0; config.dwCommonButtons = 0; config.pszMainIcon = TD_WARNING_ICON; config.pszWindowTitle = L"Blender"; config.pszMainInstruction = L"Popup Tile"; config.pszContent = L"yadayadaya drivers yadayadaya "; config.pButtons = buttons; config.cButtons = ARRAYSIZE(buttons); TaskDialogIndirect(&config, &nButtonPressed, NULL, NULL); switch (nButtonPressed) { case IDOK: break; case IDCONTINUE: break; default: break; // should never happen } ``` gets you ![image.png](https://archive.blender.org/developer/F7789154/image.png) cc: @Jeroen-Bakker

This issue was referenced by cf682b9dab

This issue was referenced by cf682b9dab36c4b96084c6f7b5e4ebc1f33ca28e
Author
Owner

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Brecht Van Lommel self-assigned this 2019-10-09 13:43:14 +02:00
Thomas Dinges added this to the 2.81 milestone 2023-02-08 16:46:56 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70521
No description provided.