GPU: show more descriptive labels on unsupported GPU dialog

Thanks to Ray Molenkamp for the help with the Windows implementation.

Fixes T70521

Differential Revision: https://developer.blender.org/D6023