intern/ghost/intern/GHOST_SystemX11.cpp
@@ -2176,7 +2176,7 @@ class DialogData {
         height(175),
         padding_x(10),
         padding_y(5),
-        button_width(50),
+        button_width(130),
         button_height(24),
         button_inset_x(10),
         button_border_size(1),
@@ -2247,6 +2247,8 @@ static void split(const char *text, const char *seps, char ***str, int *count)
 
 GHOST_TSuccess GHOST_SystemX11::showMessageBox(const char *title,
                                                const char *message,
+                                               const char *help_label,
+                                               const char *continue_label,
                                                const char *link,
                                                GHOST_DialogOptions) const
 {
@@ -2325,20 +2327,24 @@ GHOST_TSuccess GHOST_SystemX11::showMessageBox(const char *title,
                     text_splitted[i],
                     (int)strlen(text_splitted[i]));
       }
-      dialog_data.drawButton(m_display, window, buttonBorderGC, buttonGC, 1, "Ok");
+      dialog_data.drawButton(m_display, window, buttonBorderGC, buttonGC, 1, continue_label);
       if (strlen(link)) {
-        dialog_data.drawButton(m_display, window, buttonBorderGC, buttonGC, 2, "Help");
+        dialog_data.drawButton(m_display, window, buttonBorderGC, buttonGC, 2, help_label);
       }
     }
     else if (e.type == ButtonRelease) {
       if (dialog_data.isInsideButton(e, 1)) {
         break;
       }
-      else if (strlen(link) && dialog_data.isInsideButton(e, 2)) {
-        string cmd = "xdg-open \"" + string(link) + "\"";
-        if (system(cmd.c_str()) != 0) {
-          GHOST_PRINTF("GHOST_SystemX11::showMessageBox: Unable to run system command [%s]", cmd);
+      else if (dialog_data.isInsideButton(e, 2)) {
+        if (strlen(link)) {
+          string cmd = "xdg-open \"" + string(link) + "\"";
+          if (system(cmd.c_str()) != 0) {
+            GHOST_PRINTF("GHOST_SystemX11::showMessageBox: Unable to run system command [%s]",
+                         cmd);
+          }
         }
+        break;
       }
     }
   }
