source/blender/windowmanager/intern/wm_window_private.h
@@ -34,6 +34,8 @@
  * In all other cases this message box should not be used. */
 void WM_ghost_show_message_box(const char *title,
                                const char *message,
+                               const char *help_label,
+                               const char *continue_label,
                                const char *link,
                                GHOST_DialogOptions dialog_options);
 
